packages/docs/versioned_docs/version-1.5.1/components/dockview.mdx
---
description: Dockview Documentation
---

import { SimpleDockview } from '@site/src/components/simpleDockview';
import {
    RenderingDockview,
    Checkbox,
} from '@site/src/components/dockview/rendering';
import { DndDockview } from '@site/src/components/dockview/dnd';
import { EventsDockview } from '@site/src/components/dockview/events';
import { ContextMenuDockview } from '@site/src/components/dockview/contextMenu';
import { NestedDockview } from '@site/src/components/dockview/nested';
import { CustomHeadersDockview } from '@site/src/components/dockview/customHeaders';
import Link from '@docusaurus/Link';

# Dockview

## Introduction

Dockview is an abstraction built on top of [Gridviews](./gridview) where each view is a container of many tabbed panels.

<div
    style={{
        height: '300px',
        backgroundColor: 'rgb(30,30,30)',
        color: 'white',
        margin: '20px 0px',
    }}
>
    <SimpleDockview />
</div>

You can access the panels associated group through the `panel.group` variable.
The group will always be defined and will change if a panel is moved into another group.

## DockviewReact Component

You can create a Dockview through the use of the `ReactDockview` component.

```tsx
import { ReactDockview } from 'dockview';
```

| Property            | Type                                 | Optional | Default | Description                                                  |
| ------------------- | ------------------------------------ | -------- | ------- | ------------------------------------------------------------ |
| onReady             | (event: SplitviewReadyEvent) => void | No       |         |                                                              |
| components          | object                               | No       |         |                                                              |
| tabComponents       | object                               | Yes      |         |                                                              |
| watermarkComponent  | object                               | Yes      |         |                                                              |
| hideBorders         | boolean                              | Yes      | false   |                                                              |
| className           | string                               | Yes      | ''      |                                                              |
| disableAutoResizing | boolean                              | Yes      | false   | See <Link to="../basics/#auto-resizing">Auto Resizing</Link> |
| onDidDrop           | Event                                | Yes      | false   |                                                              |
| showDndOverlay      | Event                                | Yes      | false   |                                                              |

## Dockview API

The Dockview API is exposed both at the `onReady` event and on each panel through `props.containerApi`.
Through this API you can control general features of the component and access all added panels.

```tsx title="Dockview API via Panel component"
const MyComponent = (props: IDockviewPanelProps<{ title: string }>) => {
    // props.containerApi...

    return <div>{`My first panel has the title: ${props.params.title}`}</div>;
};
```

```tsx title="Dockview API via the onReady callback"
const onReady = (event: DockviewReadyEvent) => {
    // event.api...
};
```

| Property               | Type                                                 | Description                                              |
| ---------------------- | ---------------------------------------------------- | -------------------------------------------------------- |
| height                 | `number`                                             | Component pixel height                                   |
| width                  | `number`                                             | Component pixel width                                    |
| minimumHeight          | `number`                                             |                                                          |
| maximumHeight          | `number`                                             |                                                          |
| maximumWidth           | `number`                                             |                                                          |
| maximumWidth           | `number`                                             |                                                          |
| length                 | `number`                                             | Number of panels                                         |
| size                   | `number`                                             | Number of Groups                                         |
| panels                 | `IDockviewPanel[]`                                   |                                                          |
| groups                 | `GroupPanel[]`                                       |                                                          |
| activePanel            | `IDockviewPanel \| undefined`                        |                                                          |
| activeGroup            | `IDockviewPanel \| undefined`                        |                                                          |
|                        |                                                      |                                                          |
| onDidLayoutChange      | `Event<void>`                                        |                                                          |
| onDidLayoutFromJSON    | `Event<void>`                                        |                                                          |
| onDidAddGroup          | `Event<GroupPanel>`                                  |                                                          |
| onDidRemoveGroup       | `Event<GroupPanel>`                                  |                                                          |
| onDidActiveGroupChange | `Event<GroupPanel \| undefined>`                     |                                                          |
| onDidAddPanel          | `Event<IDockviewPanel>`                              |                                                          |
| onDidRemovePanel       | `Event<IDockviewPanel>`                              |                                                          |
| onDidActivePanelChange | `Event<IDockviewPanel \| undefined>`                 |                                                          |
| onDidDrop              | `Event<DockviewDropEvent`                            |                                                          |
|                        |                                                      |                                                          |
| addPanel               | `addPanel(options: AddPanelOptions): IDockviewPanel` |                                                          |
| getPanel               | `(id: string) \| IDockviewPanel \| undefined`        |                                                          |
| addEmptyGroup          | `(options? AddGroupOptions): void`                   |                                                          |
| closeAllGroups         | `(): void`                                           |                                                          |
| removeGroup            | `(group: GroupPanel): void`                          |                                                          |
| getGroup               | `(id: string): GroupPanel \| undefined`              |                                                          |
|                        |                                                      |                                                          |
| getTabHeight           | `(): number \| undefined`                            |                                                          |
| setTabHeight           | `(hegiht: number \| undefined): void`                |                                                          |
| updateOptions          | `(options:SplitviewComponentUpdateOptions): void`    |                                                          |
| focus                  | `(): void`                                           |                                                          |
| layout                 | `(width: number, height:number): void`               | <Link to="../basics/#auto-resizing">Auto Resizing</Link> |
| fromJSON               | `(data: SerializedDockview): void`                   | <Link to="../basics/#serialization">Serialization</Link> |
| toJSON                 | `(): SerializedDockview`                             | <Link to="../basics/#serialization">Serialization</Link> |
| clear                  | `(): void`                                           | Clears the current layout                                |

## Dockview Panel API

```tsx
const MyComponent = (props: IDockviewPanelProps<{ title: string }>) => {
    // props.api...

    return <div>{`My first panel has the title: ${props.params.title}`}</div>;
};
```

| Property               | Type                                                        | Description     |
| ---------------------- | ----------------------------------------------------------- | --------------- |
| id                     | `string`                                                    | Panel id        |
| isFocused              | `boolean`                                                   | Is panel focsed |
| isActive               | `boolean`                                                   | Is panel active |
| width                  | `number`                                                    | Panel width     |
| height                 | `number`                                                    | Panel height    |
| onDidDimensionsChange  | `Event<PanelDimensionChangeEvent>`                          |                 |
| onDidFocusChange       | `Event<FocusEvent>`                                         |                 |
| onDidVisibilityChange  | `Event<VisibilityEvent>`                                    |                 |
| onDidActiveChange      | `Event<ActiveEvent>`                                        |                 |
| setActive              | `(): void`                                                  |                 |
|                        |                                                             |                 |
| onDidConstraintsChange | `onDidConstraintsChange: Event<PanelConstraintChangeEvent>` |                 |
| setConstraints         | `(value: PanelConstraintChangeEvent2): void;`               |                 |
| setSize                | `(event: SizeEvent): void`                                  |                 |
|                        |                                                             |                 |
| group                  | `GroupPanel                                                 | undefined`      |
| isGroupActive          | `boolean`                                                   |                 |
| title                  | `string`                                                    |                 |
| suppressClosable       | `boolean`                                                   |                 |
| close                  | `(): void`                                                  |                 |
| setTitle               | `(title: string): void`                                     |                 |

## Advanced Features

### Resizing via API

Each Dockview is comprised of a number of groups, each of which have a number of panels.
Logically most people would want to resize a panel but practically this really translates to resizing the group to which the panel belongs.

From the api you can access the panels group object (`props.group`) which exposes it's own api object (`props.groups.api`).
This api is largly similar to the <Link to="./gridview/#gridview-panel-api">Gridview API</Link>.

To resize an individual panel you could create a snippet similar to below.

```tsx
const onResizePanel = () => {
    props.api.group.api.setSize({
        height: 100,
    });
};
```

```tsx
const onResizePanel = () => {
    props.api.group.api.setSize({
        width: 100,
    });
};
```

### Locked group

Locking a group will disable all drop events for this group ensuring a user can not add additional panels to the group.
You can still add groups to a locked panel programatically using the API.

```tsx
panel.group.locked = true;
```

### Group header

You may wish to hide the header section of a group. This can achieved through setting the `hidden` variable on `panel.group.header`.

```tsx
panel.group.header.hidden = true;
```

### Custom Tab Headers

You can provide custom renderers for your tab headers.
A default implementation of `DockviewDefaultTab` is provided should you only wish to attach minor
changes and events that do not alter the default behaviour, for example to add a custom context menu event
handler.

You are also free to define a custom renderer entirely from scratch and not make use of the `DockviewDefaultTab` component.

```tsx title="Attaching a custom context menu event handlers to a custom header"
import { IDockviewPanelHeaderProps, DockviewDefaultTab } from 'dockview';

const MyCustomheader = (props: IDockviewPanelHeaderProps) => {
    const onContextMenu = (event: React.MouseEvent) => {
        event.preventDefault();
        alert('context menu');
    };
    return <DockviewDefaultTab onContextMenu={onContextMenu} {...props} />;
};
```

To use a custom renderer you can must register a collection of tab components

```tsx
const tabComponents = {
    myCustomHeader: MyCustomHeader,
};

return <DockviewReact tabComponents={tabComponents}  ... />;
```

```tsx
api.addPanel({
    id: 'panel_1',
    component: 'default',
    tabComponent: 'myCustomHeader', // <--
    title: 'Panel 1',
});
```

You can also override the default tab renderer which will be used when no `tabComponent` is provided to the `addPanel` function.

```tsx
<DockviewReact defaultTabComponent={MyCustomHeader}  ... />;
```

As a simple example the below attachs a custom event handler for the context menu on all tabs as a default tab renderer

<CustomHeadersDockview />

### Rendering

Although `DockviewReact` will only add those tabs that are visible to the DOM all associated React Components for each tab including those that
are not initially visible will be created.
This will mean that any hooks in those components will run and if you running expensive operations in the tabs you may end up doing a lot of initial
work for what are hidden tabs.

This is the default behaviour to ensure the greatest flexibility for the user but you can create a Higher-Order component wrapping your components that
will ensure the component is only created if the tab is visible as below:

```tsx
import { PanelApi } from 'dockview';
import * as React from 'react';

function RenderWhenVisible<
    T extends { api: Pick<PanelApi, 'isVisible' | 'onDidVisibilityChange'> }
>(component: React.FunctionComponent<T>) {
    const HigherOrderComponent = (props: T) => {
        const [visible, setVisible] = React.useState<boolean>(
            props.api.isVisible
        );

        React.useEffect(() => {
            const disposable = props.api.onDidVisibilityChange((event) =>
                setVisible(event.isVisible)
            );

            return () => {
                disposable.dispose();
            };
        }, [props.api]);

        if (!visible) {
            return null;
        }

        return React.createElement(component, props);
    };
    return HigherOrderComponent;
}
```

```tsx
const component = RenderWhenVisible(MyComponent);
```

Through toggling the checkbox you can see that when you only render those panels which are visible the underling React component is destroyed when it becomes hidden and re-created when it becomes visible.

<Checkbox />
<div
    style={{
        height: '300px',
        backgroundColor: 'rgb(30,30,30)',
        color: 'white',
        margin: '20px 0px',
    }}
>
    <RenderingDockview renderVisibleOnly={false} />
</div>

### Drag And Drop

The component exposes some method to help determine whether external drag events should be interacted with or not.

```tsx
/**
 * called when an ondrop event which does not originate from the dockview libray and
 * passes the showDndOverlay condition occurs
 **/
const onDidDrop = (event: DockviewDropEvent) => {
    const { group } = event;

    event.api.addPanel({
        id: 'test',
        component: 'default',
        position: {
            referencePanel: group.activePanel.id,
            direction: 'within',
        },
    });
};

/**
 * called for drag over events which do not originate from the dockview library
 * allowing the developer to decide where the overlay should be shown for a
 * particular drag event
 **/
const showDndOverlay = (event: DockviewDndOverlayEvent) => {
    return true;
};

return (
    <DockviewReact
        components={components}
        onReady={onReady}
        className="dockview-theme-abyss"
        onDidDrop={onDidDrop}
        showDndOverlay={showDndOverlay}
    />
);
```

<DndDockview />

### Events

<EventsDockview />

### Nested Dockviews

You can safely create multiple dockview instances within one page and nest dockviews within other dockviews.
If you wish to interact with the drop event from one dockview instance in another dockview instance you can implement the `showDndOverlay` and `onDidDrop` props on `DockviewReact`.

<NestedDockview />

### Group Controls Panel

`DockviewReact` accepts a prop `groupControlComponent` which expects a React component whos props are `IDockviewGroupControlProps`.
This control will be rendered inside the header bar on the right hand side for each group of tabs.

```tsx
const Component: React.FunctionComponent<IDockviewGroupControlProps> = () => {
    return <div>{'...'}</div>;
};

return <DockviewReact {...props} groupControlComponent={Component} />;
```
